<resources>
    <string name="app_name">TriviaQuiz</string>
    <string name="welcomeTextView">Welcome to Trivia App</string>
    <string name="triviaReadyTextView">Trivia Ready</string>
    <string name="exitButton">Exit</string>
    <string name="startTriviaButton">Start Trivia</string>
    <string name="questionNumberHere">Q1</string>
    <string name="timeLeft">Time Left :</string>
    <string name="questionHere">Question goes here</string>
    <string name="previousButton">Previous</string>
    <string name="nextButton">Next</string>
    <string name="correctAnswers">Correct answers</string>
    <string name="yourPerformance">Your performance:</string>
    <string name="resultPercentage">%</string>
    <string name="urlToGetQuestions">http://dev.theappsdr.com/apis/trivia_json/index.php</string>
    <string name="loadingTrivia">Loading Trivia</string>
    <string name="mainIntentStartTriviaStringConstant">TO_TRIVIA</string>
    <string name="countdownTimer">Time Left :</string>
    <string name="seconds"> seconds</string>
    <string name="questionSymbol">Q</string>
    <string name="NoQuestionReceived">No questions were downloaded from the URL</string>
    <string name="FinishButtonText">Finish</string>
    <string name="SendToStats">ToStats</string>
    <string name="noConnection">Check your network Connection</string>
    <string name="question">Question:</string>
    <string name="userAnswer">Your Answer:</string>
    <string name="answer">Answer:</string>
    <string name="invalid">Invalid</string>
    <string name="choicenotselected">No Choice Selected</string>
    <string name="LoadingImageProgressDialogText">Loading Image..</string>
</resources>
