<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shara.triviaquiz.TriviaActivity">

    <TextView
        android:text="@string/questionNumberHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/questionNumberTextView"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/timeLeft"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/timeCounterTextView"
        android:textStyle="normal|bold" />




    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/questionNumberTextView"
        android:id="@+id/imageViewRelativeLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/questionImageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/progressBar2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_ProgressDialogMessage"
            android:gravity="center"
            android:text="@string/LoadingImageProgressDialogText"
            android:layout_marginBottom="16dp"
            android:layout_above="@+id/progressBar2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
        android:text="@string/questionHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewRelativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/questionTextView"
        android:textStyle="normal|bold"
        android:textSize="14sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_below="@+id/questionTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/checkBoxLinearLayout" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGroupForChoices" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:text="@string/previousButton"
        android:layout_width="wrap_content"
        android:id="@+id/previousButton"
        android:textSize="12sp"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/nextButton"
        android:layout_width="wrap_content"
        android:id="@+id/nextButton"
        android:textSize="12sp"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_blue_dark" />

</RelativeLayout>
