<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shara.triviaquiz.StatsActivity">

    <TextView
        android:text="@string/correctAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/correctAnswersTextView"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/correctAnswersTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_height="200sp"
        android:id="@+id/scrollViewCorrectAnswers"
        android:layout_above="@+id/performanceTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/correctAnswersDisplayLinearLayout" />
    </ScrollView>

    <ProgressBar
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="275sp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="67dp" />

    <TextView
        android:text="@string/yourPerformance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/performanceTextView"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_above="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp" />

    <TextView
        android:text="@string/resultPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultPercentageTextView"
        android:textStyle="normal|bold"
        android:textSize="14sp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/FinishButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/finishButton" />
</RelativeLayout>
