<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shara.triviaquiz.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTextView"
        android:textAlignment="center"
        android:id="@+id/welcomeTextView"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trivia"
        android:layout_marginTop="39dp"
        android:id="@+id/triviaLogoImageView"
        android:layout_below="@+id/welcomeTextView"
        android:layout_centerHorizontal="true"
        tools:visibility="invisible"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/triviaReadyTextView"
        android:textAlignment="center"
        android:layout_below="@+id/triviaLogoImageView"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/startTriviaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:id="@+id/startTriviaButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        android:elevation="0dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="12sp"
        android:layout_alignTop="@+id/exitButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="65dp"
        android:id="@+id/exitButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_blue_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
